--- a/views/message.ejs
+++ b/views/message.ejs
@@ -8,7 +8,7 @@
 <body>
     <%- include('header') %>
     <ul>
-        <li><%=message.user%></li>
+        <li><%=message.username%></li>
         <li><%=message.text%></li>
         <li><%=message.added%></li>
     </ul>
